[tool.poetry]
name = "maconso-api"
version = "0.1.0"
description = "Multi-user RAG application with agent capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
influxdb-client = "*"
pandas = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
# Add other development dependencies here if needed

[tool.poetry.scripts]
maconso-pipeline = "src.pipeline:main"
maconso-fetch = "src.pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-string-normalization = false
line-ending = "auto"